.history/yamls/nodeport-service_20250717163102.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-daddyfoundation-nodeport
  namespace: frontend
spec:
  type: NodePort
  selector:
    app: web-daddyfoundation
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30081
