.history/yamls/nodeport-service_20250807202842.yaml
apiVersion: v1
kind: Service
metadata:
  name: metuaa-admin-mapper-nodeport
  namespace: frontend
spec:
  type: NodePort
  selector:
    app: metuaa-admin-mapper
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30083
