.history/yamls/service_20250717163302.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-daddyfoundation
  namespace: frontend
spec:
  selector:
    app: web-daddyfoundation
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
