.history/yamls/ingress_20250718154140.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-daddyfoundation
  namespace: frontend
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - web.daddyfoundation.org
      secretName: web-daddyfoundation-tls
  rules:
    - host: web.daddyfoundation.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-daddyfoundation
                port:
                  number: 80
