.history/yamls/ingress_20250807202906.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metuaa-admin-mapper
  namespace: frontend
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - web1.daddyfoundation.org
      secretName: metuaa-admin-mapper-tls
  rules:
    - host: web1.daddyfoundation.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metuaa-admin-mapper
                port:
                  number: 80
